// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoanForm should render 1`] = `
<form
  className="loan-form form form-aligned"
  onSubmit={[Function]}
>
  <fieldset>
    <InputField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Name"
      name="name"
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value="5SS Reno Loan"
    />
    <DateField
      focus="name"
      forceErrorDisplay={true}
      label="Start date"
      name="startDate"
      onChange={[Function]}
      onFocus={[Function]}
      value="2014-09-10"
    />
    <DateField
      focus="name"
      forceErrorDisplay={true}
      label="End date"
      name="endDate"
      onChange={[Function]}
      onFocus={[Function]}
      value="2039-09-10"
    />
    <CurrencyField
      focus="name"
      forceErrorDisplay={true}
      label="Principal amount"
      name="principal"
      onChange={[Function]}
      onFocus={[Function]}
      value="500000"
    />
    <SelectField
      focus="name"
      forceErrorDisplay={true}
      label="Compounding period"
      name="compoundingPeriod"
      onChange={[Function]}
      onFocus={[Function]}
      options={
        Array [
          Array [
            "Daily",
            "daily",
          ],
          Array [
            "Monthly",
            "monthly",
          ],
        ]
      }
      value="daily"
    />
    <InputField
      focus="name"
      forceErrorDisplay={true}
      label="Length in years"
      min="0"
      name="lengthInYears"
      onChange={[Function]}
      onFocus={[Function]}
      type="number"
      value="25"
    />
    <CurrencyField
      focus="name"
      forceErrorDisplay={true}
      label="Establishment fees"
      name="establishmentFees"
      onChange={[Function]}
      onFocus={[Function]}
      value="1500"
    />
    <SelectField
      focus="name"
      forceErrorDisplay={true}
      label="Repayment type"
      name="repaymentType"
      onChange={[Function]}
      onFocus={[Function]}
      options={
        Array [
          Array [
            "Daily",
            "daily",
          ],
          Array [
            "Monthly",
            "monthly",
          ],
        ]
      }
      value="principalAndInterest"
    />
  </fieldset>
  <fieldset>
    <button
      className="button button-primary"
      type="submit"
    >
      Submit
    </button>
  </fieldset>
</form>
`;

exports[`LoanForm should render 2`] = `
<form
  className="loan-form form form-aligned"
  onSubmit={[Function]}
>
  <fieldset>
    <InputField
      errors={Array []}
      focus="name"
      forceErrorDisplay={true}
      label="Name"
      name="name"
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value="Briggs Primary"
    />
    <DateField
      focus="name"
      forceErrorDisplay={true}
      label="Start date"
      name="startDate"
      onChange={[Function]}
      onFocus={[Function]}
      value="2014-05-10"
    />
    <DateField
      focus="name"
      forceErrorDisplay={true}
      label="End date"
      name="endDate"
      onChange={[Function]}
      onFocus={[Function]}
      value="2029-05-10"
    />
    <CurrencyField
      focus="name"
      forceErrorDisplay={true}
      label="Principal amount"
      name="principal"
      onChange={[Function]}
      onFocus={[Function]}
      value="150000"
    />
    <SelectField
      focus="name"
      forceErrorDisplay={true}
      label="Compounding period"
      name="compoundingPeriod"
      onChange={[Function]}
      onFocus={[Function]}
      options={
        Array [
          Array [
            "Daily",
            "daily",
          ],
          Array [
            "Monthly",
            "monthly",
          ],
        ]
      }
      value="monthly"
    />
    <InputField
      focus="name"
      forceErrorDisplay={true}
      label="Length in years"
      min="0"
      name="lengthInYears"
      onChange={[Function]}
      onFocus={[Function]}
      type="number"
      value="30"
    />
    <CurrencyField
      focus="name"
      forceErrorDisplay={true}
      label="Establishment fees"
      name="establishmentFees"
      onChange={[Function]}
      onFocus={[Function]}
    />
    <SelectField
      focus="name"
      forceErrorDisplay={true}
      label="Repayment type"
      name="repaymentType"
      onChange={[Function]}
      onFocus={[Function]}
      options={
        Array [
          Array [
            "Daily",
            "daily",
          ],
          Array [
            "Monthly",
            "monthly",
          ],
        ]
      }
      value="interestOnly"
    />
  </fieldset>
  <fieldset>
    <button
      className="button button-primary"
      type="submit"
    >
      Submit
    </button>
  </fieldset>
</form>
`;
